<resources>
    <string name="app_name">AppClassAssist</string>
    <string name="administrarClases">Administrar mis clases</string>
    <string name="noCompatible">No compatible</string>
    <string name="noBluetooth">Lamentablemente su dispositivo no dispone del módulo Bluetooth</string>
    <string name="salir">Salir</string>
    <string name="loginEmailHint">Correo electrónico</string>
    <string name="loginClaveHint">Contraseña</string>
    <string name="loginAcceder">Acceder</string>
    <string name="loginRegistrar" >Registrar</string>
    <string name="Regresar">Regresar</string>
    <string name="loginOlvideClave">Olvidé mi contraseña</string>
    <string name="loginResetClave">En breve recibirá un mensaje por correo con las instrucciona para reiniciar su clave.</string>

    <string name="loginErrorRegistrar">Error al registrar usuario, verifique datos por favor</string>
    <string name="loginRegistrarCorrecto">¡Usuario registrado correctamente!</string>

    <string name="loginVerificarClave">Repita su contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="loginCamposVacios">Faltan datos de entrada</string>
    <string name="loginClaveError">Las contraseñas no coinciden</string>

    <string name="loginErrorIniciar">Error en usuario y/o constraseña</string>
    <string name="loginId">Id Control</string>
    <string name="loginNombre">Nombre</string>
    <string name="loginApellidos">Apellidos</string>
    <string name="loginBluetooth">Bluetooth</string>
    <string name="loginBluetoothSolicitar">¿Bluetooth MAC?</string>


    <string name="clasesCodigo">Código de clase</string>
    <string name="clasesAgregar">Agregar</string>
    <string name="clasesAgregadaSatisfactoriamente">Clase agregada satisfactoriamente</string>
    <string name="clasesAgregadaError">Error de código, clase no encontrada</string>
    <string name="clasesAgregarFaltaCodigo">Falta código de clase</string>
    <string name="clasesCerrarSesion">Cerrar Sesión</string>
    <string name="clasesMisClases">Mis clases</string>



    <string name="alumnoCerrar">Cerrar</string>
    <string name="alumnoAsistencias">Asistencias</string>
    <string name="alumnoFaltas">Faltas</string>
    <string name="alumnoDetallesAsistencia">Detalle de asistencias</string>
</resources>
